# sp1-verifier

program/: Cargo.toml
program/elf/: riscv32im-succinct-zkvm-elf
program/src/: main.rs  utils.rs
